--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,17 @@
   "name": "magepow/lazyload",
   "description": "Create lazy load image magento site.",
   "type": "magento2-module",
-  "version": "1.0.0",
   "license": [
       "OSL-3.0",
       "AFL-3.0"
+  ],
+  "authors": [
+    {
+      "name": "Magepow",
+      "email": "support@magepow.com",
+      "homepage": "http://magepow.com",
+      "role": "Technical Support"
+    }
   ],
   "autoload": {
       "files": [
