--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     {
       "name": "Magepow",
       "email": "support@magepow.com",
-      "homepage": "http://magepow.com",
+      "homepage": "https://magepow.com",
       "role": "Technical Support"
     }
   ],
