--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
   "name": "magepow/lazyload",
   "description": "Create lazy load image magento site.",
+  "require": {
+    "magepow/core": "^1.0.0"
+  },
   "type": "magento2-module",
   "license": [
       "OSL-3.0",
